--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: #0f0f10;
-  background-image: url("banner.png");
+  background-image: url("img/banner.png");
   background-repeat: repeat;
   background-size: 300px;
   background-attachment: fixed;
@@ -309,4 +309,35 @@ footer {
   border-top: 1px solid #333;
   padding: 1.5rem;
   margin-top: 3rem;
+}
+
+.img-modal {
+  display: none;
+  position: fixed;
+  z-index: 999;
+  padding-top: 60px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.9);
+}
+
+.img-modal-content {
+  display: block;
+  margin: auto;
+  max-width: 80%;
+  max-height: 80vh;
+  border-radius: 12px;
+}
+
+.img-close {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
 }
